# cmux

./: .dockerignore  .gitignore  .gitmodules  .oxlintrc.json  CLAUDE.md  Dockerfile  README.md  REVIEW.md  eslint.config.js  package.json  pyproject.toml  tsconfig.base.json  tsconfig.json
.agents/skills/cloudrouter/: SKILL.md
.beads/: issues.jsonl
.claude/: settings.json
.claude/commands/: review.md
.claude/hooks/: bun-check.sh  codex-review.sh
.cursor/commands/: deslop.md
.github/workflows/: checks.yml  claude.yml  daily-release.yml  docker.yml  host-screenshot-collector.yml  morph-snapshot.yml  release-updates.yml  sandbox.yml  tests.yml
apps/client/: build-mac-workaround.sh  electron-builder.json  electron.vite.config.test.ts  electron.vite.config.ts  index-electron.html  index.html  package.json  tsconfig.json  tsconfig.node.json  vercel.json  vite.config.ts  vitest.config.ts
apps/client/electron/: app-update.yml
apps/client/scripts/: generate-icons.mjs  typecheck-parallel.ts
apps/client/src/: app.tsx  client-env.ts  hero.ts  index.css  main-electron.tsx  main.tsx  providers.tsx  routeTree.gen.ts  router-provider.tsx  router.ts  zindex.css
apps/cmux-devbox-2/: .gitignore  Makefile
apps/devbox/: README.md  devbox.json  process-compose.yaml
apps/devbox-e2b/scripts/: xstartup
apps/devbox-v1/: README.md
apps/devbox/scripts/: SNAPSHOT_INFO.txt  create_base_snapshot.py  setup_base_snapshot.sh  test_morph_connection.py  verify_services.sh
apps/devbox/test/: test_edge_cases.sh  test_suite.sh
apps/edge-router/src/: index.ts
apps/global-proxy/: Cargo.toml
apps/global-proxy/src/: lib.rs
apps/global-proxy/tests/: proxy_tests.rs
apps/preview-proxy/: package.json  tsconfig.json
apps/server/: package.json  tsconfig.json
apps/server/src/: agentSpawner.ts  ghApi.ts  local-dev.ts  localCloudSync.ts  performAutoCommitAndPush.ts  proxyApp.ts  repositoryManager.test.ts  repositoryManager.ts  server.ts  socket-handlers.ts  workspace.ts
apps/worker/: package.json  tsconfig.json
apps/worker/src/: checkDockerReadiness.ts  cloudToLocalSync.ts  index.ts
apps/www/: eslint.config.js  instrumentation-client.ts  middleware.ts  next.config.ts  package.json  proxy.ts  sentry.edge.config.ts  sentry.server.config.ts  tsconfig.json  vercel.json
apps/www/app/: globals.css  page.tsx
apps/www/components/: mac-download-link.tsx  site-header.tsx
apps/www/contact/: page.tsx
apps/www/eula/: page.tsx
apps/www/hooks/: use-oauth-popup.ts
apps/www/lib/: deprecation.ts  fetch-github-stars.ts  fetch-latest-release.ts  hono-app.ts  releases.ts
apps/www/privacy-policy/: legal.tsx
apps/www/scripts/: build.sh  pr-review-heatmap.ts  pr-review-local.ts  pr-review.ts  start-code-review.ts  watch-openapi.ts
apps/www/src/: pr-review.ts
apps/www/terms-of-service/: page.tsx
apps/www/types/: novnc.d.ts
configs/: ide-deps.json  setup-claude-oauth-wrappers.sh
configs/nfpm/: cmux.yaml
configs/systemd/: cmux-devtools.service  cmux-tigervnc.service  cmux-vnc-proxy.service  cmux-worker.service  cmux.target
configs/systemd-host/: cmux.env
crates/cmux-proxy/: Cargo.toml
crates/cmux-proxy/src/: lib.rs
crates/cmux-proxy/tests/: ldpreload.rs  proxy.rs  workspace.rs
crates/cmux-pty/: Cargo.toml
crates/cmux-pty/src/: main.rs
crates/cmux-terminal/: Cargo.toml
crates/cmux-terminal/src/: character.rs  filter.rs  grid.rs  lib.rs  terminal.rs
crates/cmux-xterm/src/: lib.rs  session.rs
crates/cmux-xterm/tests/: list_tabs_order.rs  ws_integration.rs  ws_reconnect.rs
evals/screenshot/: evaluate-comments-openai.ts  evaluate-comments.ts  fetch-bot-comments.ts  index.html  package.json  vite.config.ts
evals/screenshot/data/: bot-comments.jsonl  checkpoint.json  eval-checkpoint-openai.json  evaluations-openai.jsonl
prompts/: environment-versions-0.md
scripts/: build-modal-snapshot.ts  bump-ide-deps.ts  check.ts  cleanup-dev.sh  dev.sh  docker-local-sanity-check.sh  docker-run-browser-agent.sh  docker-shell.sh  docker-trigger-screenshot.sh  morph-uptime-check.ts  morph_dockerfile.py  morph_snapshot.py  package.json  snapshot.py  sync-ide-deps.ts  test-cdp-bounding-box.ts  test-cdp-click-tracker.ts  test-cursor-overlay.ts  test-preview-proxy.ts  test-reconnect.ts  test-screenshot-collector-docker.sh  test-sync.ts  test-video-edge-cases.ts  test-video-pipeline.ts  test.ts  tsconfig.json  up.sh
scripts/lib/: ideDeps.ts
scripts/snapshot/: exec.py
scripts/stackframe/: package.json
scripts/vnc-proxy/: go.mod  main.go  main_test.go
skills/cmux/: SKILL.md
(+455 files in other folders)
